<resources>
    <string name="app_name">WeatherWear</string>
    <string name="app_full_name">웨더웨어(WeatherWear)</string>
    <string name="app_hanguel_name">웨더웨어</string>

    <!-- Menu -->
    <string name="home">홈</string>
    <string name="weather">날씨</string>
    <string name="wear">데일리룩</string>
    <string name="setting">설정</string>

    <string name="loading">로딩 중 …</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="modified">수정</string>
    <string name="search">검색</string>
    <string name="write">등록하기</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>

    <string name="finding_location">현재 위치 정보 조회 중 …</string>
    <string name="location_not_found">위치 정보 없음</string>
    <string name="setting_location_permission">⚠️\n\n위치를 가져오기 위해 권한이 필요합니다.\n\n설정 - [위치] 권한을 허용한 뒤,\n새로고침 해주세요.\n\n확인을 누르면 설정으로 이동합니다.</string>

    <string name="please_setup_your_location_permission">위치 권한을 설정해주세요.</string>
    <string name="can_not_assigned_permission">권한을 얻지 못했습니다.</string>
    <string name="can_not_load_address_info">위치 정보를 불러올 수 없습니다.</string>
    <string name="can_not_load_weather_info">날씨 정보를 불러올 수 없습니다.</string>
    <string name="weather_and_temperature_info_not_found">날씨 / 기온 정보 없음</string>

    <string name="select_date">날짜 선택</string>
    <string name="select_location">위치 선택</string>

    <string name="comment_wear_tab">비슷한 날씨, 혹은 내가 이맘때쯤 어떤 옷을 입었는지\n데일리룩으로 기록하고 확인해보세요!</string>
    <string name="comment_info">상단에 보이는 위치를 클릭하면\n주소를 설정할 수 있어요!\n(위치 권한 설정은 필수❗️)\n\n오늘의 기온별 옷차림을 만나보고,\n웨더웨어로 기록해보세요 (˵•̀ᴗ-˵) ✧</string>

    <!-- Temperature -->
    <string name="max_temperature">최고 기온</string>
    <string name="min_temperature">최저 기온</string>
    <string name="temperature_high">28° 이상</string>
    <string name="temperature_23">27° ~ 23°</string>
    <string name="temperature_20">22° ~ 20°</string>
    <string name="temperature_17">19° ~ 17°</string>
    <string name="temperature_12">16° ~ 12°</string>
    <string name="temperature_9">11° ~ 9°</string>
    <string name="temperature_5">8° ~ 5°</string>
    <string name="temperature_4">4° 이하</string>

    <!-- Detail -->
    <string name="deleted">삭제되었습니다.</string>
    <string name="ask_for_deletion">삭제한 데이터는 되돌릴 수 없습니다.\n그래도 삭제하시겠습니까?</string>

    <!-- Write -->
    <string name="write_weather_wear">웨더웨어 등록하기</string>
    <string name="what_today_weather_wear">오늘 나의\n웨더웨어(WeatherWear)는?</string>
    <string name="guide_select_date_and_location">날짜와 위치를 모두 선택하면 날씨를 확인할 수 있어요 :)\n(※ 최근 3일간 날씨 정보만 제공 가능합니다.)</string>
    <string name="one_line_diary">한 줄 일기</string>
    <string name="guide_diary">일기 작성은 선택!\n부담이 되지 않는다면 소소하게 한 줄 적어보세요 ;)</string>

    <!-- Modify -->
    <string name="completed_modify">수정되었습니다.</string>
    <string name="modify_weather_wear">웨더웨어 수정하기</string>
    <string name="guide_modify_not_date_and_location">⚠️ 날짜와 위치는 수정이 불가능합니다.</string>
    <string name="modify">수정하기</string>

    <!-- Photo -->
    <string name="please_select_photo_option">사진 첨부 방식을 선택해주세요.</string>
    <string name="camera">카메라</string>
    <string name="gallery">앨범</string>
    <string name="use_photo">사진 사용</string>
    <string name="take_a_picture_again">다시 찍기</string>
    <string name="guide_select_only_one_photo">사진은 한 장만 선택할 수 있어요!</string>
    <string name="selected_photo_empty">선택된 사진이 없습니다.</string>
    <string name="setting_photo_permission">⚠️\n\n사진을 가져오기 위해 권한이 필요합니다.\n설정 - [카메라], [저장공간] 권한을 허용해주세요.\n\n확인을 누르면 설정으로 이동합니다.</string>

    <!-- Search -->
    <string name="search_date">날짜로 검색</string>
    <string name="search_temperature">기온으로 검색</string>
    <string name="select_temperature_range">기온 범위를 선택해주세요.</string>
    <string name="guide_search_location_comment">대략적인 주소를 입력하면 \'읍/면/동\' 까지 조회 가능해요!\n예시) 강남역 → 서울 강남구 역삼동</string>
    <string name="please_check_option">옵션을 선택해주세요!</string>
    <string name="empty_search_result">검색 결과가 없습니다.</string>

    <!-- Setting -->
    <string name="data_back_up_or_restore">데이터 백업 / 복원하기</string>
    <string name="push_notification">푸시 알림</string>
    <string name="push_title">웨더웨어(WeatherWear)에서\n알림을 보내고자 합니다.</string>
    <string name="push_message">해당 기기로 날씨 및 옷차림에 관련된 정보를 푸시 알림으로 보내드리겠습니다.\n\n앱 푸시에 수신 동의하시겠습니까?</string>
    <string name="push_allow">허용</string>
    <string name="push_not_allow">허용 안 함</string>
    <string name="push_on">푸시 알림 기능을 활성화합니다.</string>
    <string name="push_off">푸시 알림 기능을 해제합니다.</string>
    <string name="google_login_required_text">구글 로그인이 필요합니다.</string>
    <string name="logout"><u>로그아웃</u></string>

    <!-- BackUp -->
    <string name="data_back_up">데이터 백업하기</string>
    <string name="success_data_back_up">백업을 성공하였습니다.</string>
    <string name="fail_data_back_up">백업을 실패했습니다.</string>
    <string name="data_restore">데이터 복원하기</string>
    <string name="success_restore">데이터 복원을 성공하였습니다.</string>
    <string name="fail_data_restore">데이터 복원을 실패했습니다.</string>
    <string name="ask_back_up">데이터 백업을 진행하시겠습니까?</string>
    <string name="ask_restore">데이터 복원을 진행하시겠습니까?</string>
    <string name="guide_permission_back_up">데이터 파일을 백업/복원 하기 위해\n권한이 필요합니다.</string>
    <string name="guide_back_up_comment">⚠️\n\n마지막으로 백업한 데이터를 기준으로\n현재 데이터에 덮어쓰는 형식으로 복원됩니다.\n\n오래된 백업 데이터로 복구를 진행하면\n소중한 데이터가 손실되고 말아요 (oT-T)尸\n\n데이터 백업/복원은 항상 신중하게 시도해주세요!</string>

    <!-- Widget -->
    <string name="update_widget">웨더웨더 위젯 업데이트 중…</string>

    <!-- Error -->
    <string name="request_error">예기치 못한 오류가 발생했습니다.</string>
    <string name="fail_get_information">정보 조회를 실패했습니다.</string>
    <string name="fail_photo_to_get">사진을 가져오지 못했습니다.</string>

</resources>