<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="enable"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.modify.ModifyActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="?attr/toolbarWithCloseStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/notosans_kr_medium"
                android:text="@string/modify_weather_wear"
                android:textSize="16sp" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/modifyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/weatherWearCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/weatherWearImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@color/snow" />

                    <LinearLayout
                        android:id="@+id/selectPhotoView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_add_photo"
                            app:tint="@color/gray_200" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:gravity="center"
                            android:text="@string/guide_select_only_one_photo"
                            android:textColor="@color/gray_500"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/cancelPhotoButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="end"
                        android:layout_margin="6dp"
                        android:background="@drawable/bg_circle_blue"
                        android:src="@drawable/ic_close"
                        android:visibility="gone"
                        app:tint="@color/white" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/weatherTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/pastel_yellow"
                    android:fontFamily="@font/notosans_kr_medium"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weatherWearCardView"
                    tools:text="최고 기온 28°/ 최저 기온 24°/ 맑음" />

                <TextView
                    android:id="@+id/guideSelectInfoView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/guide_modify_not_date_and_location"
                    android:textColor="@color/gray_500"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weatherTextView" />

                <TextView
                    android:id="@+id/guideDateView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/notosans_kr_medium"
                    android:text="@string/select_date"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideSelectInfoView" />

                <TextView
                    android:id="@+id/selectDateTextView"
                    style="@style/Widget.WeatherWear.BaseUnableView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/resize_ic_calendar"
                    app:drawableTint="@color/gray_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideDateView"
                    tools:text="2022.10.21" />

                <TextView
                    android:id="@+id/guideLocationView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/notosans_kr_medium"
                    android:text="@string/select_location"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/selectDateTextView" />

                <TextView
                    android:id="@+id/selectLocationTextView"
                    style="@style/Widget.WeatherWear.BaseUnableView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/resize_ic_location"
                    app:drawableTint="@color/gray_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideLocationView"
                    tools:text="강남구 대치동" />

                <TextView
                    android:id="@+id/guideDiaryView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/notosans_kr_medium"
                    android:text="@string/one_line_diary"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/selectLocationTextView" />

                <EditText
                    android:id="@+id/diaryEditText"
                    style="@style/Widget.WeatherWear.BaseInputView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="top"
                    android:hint="@string/guide_diary"
                    android:maxLength="200"
                    android:minHeight="80dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideDiaryView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/modifyButton"
            style="@style/Widget.WeatherWear.EnableButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:enabled="@{enable}"
            android:text="@string/modify"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/loadingView"
            layout="@layout/loading_weather" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>