<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.main.setting.backup.BackUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="?attr/toolbarWithCloseStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/loginGroup"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:constraint_referenced_ids="loginButton, loginTextView"
                tools:visibility="gone" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/google_login_required_text"
                android:textColor="@color/gray_500"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/loginButton"
                app:layout_constraintStart_toStartOf="@id/loginButton"
                app:layout_constraintTop_toBottomOf="@id/loginButton" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/contentGroup"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:constraint_referenced_ids="profileImageView, nameTextView, emailTextView, backUpButton, guideBackUpComment, restoreButton, logoutButton "
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/weather_sun" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/maruburi_semibold"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/profileImageView"
                app:layout_constraintStart_toStartOf="@id/profileImageView"
                app:layout_constraintTop_toBottomOf="@id/profileImageView"
                tools:text="임현주" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_500"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                tools:text="dear.jjwim@gmail.com" />

            <TextView
                android:id="@+id/guideBackUpComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/guide_back_up_comment"
                android:textColor="@color/blue_700"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTextView" />

            <Button
                android:id="@+id/backUpButton"
                style="@style/Widget.WeatherWear.BaseButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/data_back_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideBackUpComment" />

            <Button
                android:id="@+id/restoreButton"
                style="@style/Widget.WeatherWear.CancelButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/data_restore"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backUpButton" />

            <TextView
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="6dp"
                android:text="@string/logout"
                android:textColor="@color/gray_500"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/restoreButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>